# inputctl

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_MESSAGE.txt  Cargo.toml  Justfile  README.md  demo_hold_state.py  demo_smooth_movement.py  pytest.ini  rebuild_and_demo.sh  reflex_agent_master_plan.md  sync-to-train.sh
.claude/: settings.local.json
checkpoints/: config.json
docs/: decisions.md
inputctl/: Cargo.toml  README.md  pyproject.toml
inputctl-capture/: Cargo.toml  README.md
inputctl-capture/benches/: screenshot_ops.rs
inputctl-capture/src/: error.rs  lib.rs  recorder.rs  recorder_ops.rs
inputctl-capture/src/capture/: mod.rs  portal.rs
inputctl-capture/src/primitives/: frame_ops.rs  grid.rs  mod.rs  screen.rs  screenshot.rs
inputctl-capture/tests/: ffmpeg_args.rs  frame_ops.rs  pipewire_format.rs  recorder_pipeline.rs  screenshot_ops.rs
inputctl-reflex/: Cargo.toml  README.md
inputctl-reflex/src/: main.rs
inputctl-vision/: Cargo.toml  README.md  demo_vision.py  pyproject.toml
inputctl-vision/examples/: basic.rs  debugger_demo.rs  llm_driven.py  pointing_delegation_demo.py  region_test.rs  screenshot_test.rs  script_driven.py  script_driven.rs  tool_grid_test.rs
inputctl-vision/src/: agent.rs  debugger.rs  error.rs  lib.rs
inputctl-vision/src/actions/: input.rs  mod.rs
inputctl-vision/src/detection/: templates.rs
inputctl-vision/src/llm/: mod.rs  tools.rs
inputctl/examples/: basic.rs  cursor_freshness_bench.rs  cursor_query_bench.rs  mouse_demo.py
inputctl/src/: cursor.rs  cursor_daemon.rs  device.rs  error.rs  interpolation.rs  keyboard.rs  lib.rs
inputctl/tests/: integration.rs
python_tests/: test_inputctl.py
reflex_infer/: Cargo.toml  README.md
reflex_infer/src/: main.rs
reflex_train/: Justfile  README.md  SCHEMA.md  eval_reflex.py  evaluate_reflex.py  export_model.py  precompute_intents.py  pyproject.toml  train_reflex.py
reflex_train/configs/: default.toml  fast.toml  mini.toml
reflex_train/data/: dataset.py  intent.py  keys.py  logs.py
reflex_train/docs/: reflex_train_design.md
reflex_train/models/: reflex_net.py
reflex_train/reflex_train/data/: dataset.py  logs.py
reflex_train/reflex_train/models/: reflex_net.py
reflex_train/reflex_train/training/: __init__.py  config.py  evaluate.py  metrics.py  report.py  train.py
reflex_train/reflex_train/training/templates/: report.html.jinja
reflex_train/reflex_train/weak_labels/: __init__.py  config.py  episodes.py  events.py  gpu_matching.py  keys.py  precompute.py  supertux.py
reflex_train/tests/: gen_synthetic_data.py  verify_dataset.py
reflex_train/training/: config.py  train.py
reflex_train/weak_labels/: config.py  precompute.py  supertux.py
src/: device.rs  error.rs  interpolation.rs  lib.rs  mouse.rs
tests/: integration.rs
visionctl/: Cargo.toml  README.md  pyproject.toml  rebuild_and_demo.sh
visionctl/examples/: basic.rs  debugger_demo.rs  pointing_delegation_demo.py  region_test.rs  screenshot_test.rs  script_driven.rs  tool_grid_test.rs
visionctl/scripts/: grounding_dino.py  pyproject.toml  setup_detection.sh  template_match.py  yoloe_detect.py
visionctl/scripts/omniparser/: omniparser.py  setup.sh
visionctl/src/: agent.rs  config.rs  debugger.rs  error.rs  lib.rs  recorder.rs  screenshot.rs  server.rs
visionctl/src/actions/: input.rs  mod.rs
visionctl/src/capture/: portal.rs
visionctl/src/detection/: mod.rs  templates.rs
visionctl/src/llm/: client.rs  mod.rs  tools.rs
visionctl/src/primitives/: cursor.rs  grid.rs  mod.rs  screen.rs  screenshot.rs
visionctl/tests/: pointing_accuracy.rs
visionctl/ui/: package-lock.json  package.json  vite.config.js
visionctl/ui/src/: App.jsx
