[package]
name = "inputctl-capture"
version = "0.1.0"
edition = "2021"
description = "Screen capture primitives for Linux (Wayland via xdg-desktop-portal)"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "inputctl-record"
path = "src/bin/record.rs"

[dependencies]
thiserror.workspace = true

# Portal/capture
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
gstreamer = "0.24"
gstreamer-app = "0.24"
tokio = { version = "1", features = ["rt-multi-thread"] }
pipewire = "0.8"
libspa = "0.8"

# KWin DBus
zbus = { version = "5.2", features = ["blocking"] }
zvariant = "5.2"

# Image processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
tempfile = "3.14"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Recorder
evdev = "0.12"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dialoguer = "0.11"
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Parquet output
arrow = "54"
parquet = { version = "54", features = ["arrow"] }

[features]
default = []
