[package]
name = "inputctl-reflex"
version = "0.1.0"
edition = "2021"
description = "ONNX inference runner for game AI with reflex-trained models"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
inputctl = { path = "../inputctl" }
inputctl-capture = { path = "../inputctl-capture" }
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parquet reading
arrow = "54"
parquet = { version = "54", features = ["arrow"] }
