[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "inputctl-vision"
version = "0.1.0"
description = "LLM-based GUI automation and agent for Linux"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]
[dependency-groups]
dev = ["pytest>=8.0"]

[tool.maturin]
features = ["python"]
