[package]
name = "inputctl"
version = "0.1.0"
edition = "2021"
description = "Linux input automation library using uinput"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
evdev = "0.12"
thiserror = { workspace = true }
rand = "0.8"
zbus = { version = "5.2", features = ["blocking"] }
tracing = "0.1"

[dependencies.pyo3]
workspace = true
optional = true

[dev-dependencies]
inputctl-vision = { path = "../inputctl-vision" }
inputctl-capture = { path = "../inputctl-capture" }

[features]
default = []
python = ["pyo3"]
