[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "inputctl"
version = "0.1.0"
description = "Linux input automation library using uinput"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.maturin]
features = ["python"]
