[package]
name = "reflex_infer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
inputctl = { path = "../inputctl" }
visionctl = { path = "../visionctl" }
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
