[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-train"
version = "0.1.0"
description = "Training pipeline for Reflex Agent"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "onnxscript>=0.5.7",
    "opencv-python>=4.11.0.86",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["reflex_train*"]
