[package]
name = "visionctl"
version = "0.1.0"
edition = "2021"
description = "Screen capture and LLM vision analysis for Wayland"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "visionctl"
path = "src/bin/visionctl.rs"

[dependencies]
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dialoguer = "0.11"
base64 = "0.22"
zbus = { version = "5.2", features = ["blocking"] }
zvariant = "5.2"
nix = { version = "0.29", features = ["fs"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
inputctl = { path = "../inputctl" }
tempfile = "3.14"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
evdev = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ctrlc = "3.4"


[dependencies.pyo3]
workspace = true
optional = true

[features]
default = []
python = ["pyo3"]
